tests/expectations/compiler/function/function_returns_record_fail.out
Error [ETYC0372057]: Only `transition` functions can have a record as input or output.
    --> compiler-test:2:14
     |
   2 | function foo(board: Board, data: u8) -> Board {
     |              ^^^^^^^^^^^^
Error [ETYC0372057]: Only `transition` functions can have a record as input or output.
    --> compiler-test:2:41
     |
   2 | function foo(board: Board, data: u8) -> Board {
     |                                         ^^^^^
Error [ETYC0372057]: Only `transition` functions can have a record as input or output.
    --> compiler-test:9:14
     |
   9 | function bar(board: Board) {
     |              ^^^^^^^^^^^^
